K8s/manifests/deployment.yaml
# This is a sample deployment manifest file for a simple web application.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: golang-application
  labels:
    app: golang-application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: golang-application
  template:
    metadata:
      labels:
        app: golang-application
    spec:
      containers:
      - name: golang-application
        image: sh1vam6/golang-application:v1
        ports:
        - containerPort: 8080
